# godotdoc

./: Cargo.toml  README.md  test.gd  test.gd.md
src/: backend.rs  main.rs  parser.rs
src/backend/: markdownbackend.rs
