[package]
name = "godotdoc"
version = "0.1.0"
authors = ["Florian Kothmeier <floriankothmeier@web.de>"]
edition = "2018"
license = "GPL-3.0-only"
description = "GodotDoc is a documentation generator for GdScript."
readme = "README.md"
repository = "https://github.com/Dragoncraft89/godotdoc/"
exclude = [
    "test.gd",
    "test.gd.md"
]


[dependencies]
clap = "~2.33"
ansi_term = "~0.11"
serde = {version="~1.0", features=["derive"]}
serde_json = "~1.0"
glob = "~0.3"